log
Mon Apr 25 01:57:07 UTC 2022: 
 treemap.c | 103 +++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 89 insertions(+), 14 deletions(-)
In file included from test.c:4:0:
treemap.c: In function ‘removeNode’:
treemap.c:108:5: error: expected identifier before ‘}’ token
     }
     ^
Compilation failed
1f9fc04
